--- a/src/main/resources/assets/blowing-bubbles/lang/en_us.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"item.blowing-bubbles.bubble_wand": "Bubble Wand",
+	"entity.blowing-bubbles.bubble": "Bubble",
 	"enchantment.blowing-bubbles.bubble_barrage": "Bubble Barrage"
 }
