--- a/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
@@ -1,4 +1,5 @@
 {
 	"item.blowing-bubbles.bubble_wand": "Палочка для пузырьков",
+	"entity.blowing-bubbles.bubble": "Пузырь",
 	"enchantment.blowing-bubbles.bubble_barrage": "Шквал пузырей"
 }
