--- a/src/main/resources/assets/blowing-bubbles/lang/en_us.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/en_us.json
@@ -8,6 +8,7 @@
 	"enchantment.blowing-bubbles.bigger_bubbles": "Bigger Bubbles",
 	"enchantment.blowing-bubbles.bigger_bubbles.desc": "Bubbles blow bigger and faster",
 	"item.blowing-bubbles.bubble_wand.rainbow": "Rainbow Bubbles",
+	"tag.item.blowing-bubbles.bubble_blocks": "Bubble Blocks",
 
 	"item.blowing-bubbles.bubble_dispenser": "Bubble Dispenser",
 	"item.blowing-bubbles.white_bubble_block": "White Bubble Block",
