--- a/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
@@ -8,6 +8,7 @@
 	"enchantment.blowing-bubbles.bigger_bubbles": "Большие пузыри",
 	"enchantment.blowing-bubbles.bigger_bubbles.desc": "Пузыри надуваются больше и быстрее",
 	"item.blowing-bubbles.bubble_wand.rainbow": "Радужные пузыри",
+	"tag.item.blowing-bubbles.bubble_blocks": "Пузыри",
 	
 	"item.blowing-bubbles.bubble_dispenser": "Раздатчик пузырей",
 	"item.blowing-bubbles.white_bubble_block": "Белый пузырь",
