--- a/src/main/resources/assets/blowing-bubbles/lang/en_us.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/en_us.json
@@ -1,6 +1,7 @@
 {
-	"item.blowing-bubbles.bubble_wand": "Bubble Wand",
 	"entity.blowing-bubbles.bubble": "Bubble",
+
+	"item.blowing-bubbles.bubble_wand": "Bubble Wand",
 	"enchantment.blowing-bubbles.bubble_barrage": "Bubble Barrage",
 	"enchantment.blowing-bubbles.bubble_barrage.desc": "Blows small bubbles non-stop",
 	"enchantment.blowing-bubbles.infinite_bubble": "Forever Bubble",
@@ -8,25 +9,44 @@
 	"enchantment.blowing-bubbles.bigger_bubbles": "Bigger Bubbles",
 	"enchantment.blowing-bubbles.bigger_bubbles.desc": "Bubbles blow bigger and faster",
 	"item.blowing-bubbles.bubble_wand.rainbow": "Rainbow Bubbles",
+	
 	"tag.item.blowing-bubbles.bubble_blocks": "Bubble Blocks",
 
-	"item.blowing-bubbles.bubble_dispenser": "Bubble Dispenser",
 	"item.blowing-bubbles.white_bubble_block": "White Bubble Block",
+	"block.blowing-bubbles.white_bubble_block": "White Bubble Block",
 	"item.blowing-bubbles.orange_bubble_block": "Orange Bubble Block",
+	"block.blowing-bubbles.orange_bubble_block": "Orange Bubble Block",
 	"item.blowing-bubbles.magenta_bubble_block": "Magenta Bubble Block",
+	"block.blowing-bubbles.magenta_bubble_block": "Magenta Bubble Block",
 	"item.blowing-bubbles.light_blue_bubble_block": "Light Blue Bubble Block",
+	"block.blowing-bubbles.light_blue_bubble_block": "Light Blue Bubble Block",
 	"item.blowing-bubbles.yellow_bubble_block": "Yellow Bubble Block",
+	"block.blowing-bubbles.yellow_bubble_block": "Yellow Bubble Block",
 	"item.blowing-bubbles.lime_bubble_block": "Lime Bubble Block",
+	"block.blowing-bubbles.lime_bubble_block": "Lime Bubble Block",
 	"item.blowing-bubbles.pink_bubble_block": "Pink Bubble Block",
+	"block.blowing-bubbles.pink_bubble_block": "Pink Bubble Block",
 	"item.blowing-bubbles.gray_bubble_block": "Gray Bubble Block",
+	"block.blowing-bubbles.gray_bubble_block": "Gray Bubble Block",
 	"item.blowing-bubbles.light_gray_bubble_block": "Light Gray Bubble Block",
+	"block.blowing-bubbles.light_gray_bubble_block": "Light Gray Bubble Block",
 	"item.blowing-bubbles.cyan_bubble_block": "Cyan Bubble Block",
+	"block.blowing-bubbles.cyan_bubble_block": "Cyan Bubble Block",
 	"item.blowing-bubbles.purple_bubble_block": "Purple Bubble Block",
+	"block.blowing-bubbles.purple_bubble_block": "Purple Bubble Block",
 	"item.blowing-bubbles.blue_bubble_block": "Blue Bubble Block",
+	"block.blowing-bubbles.blue_bubble_block": "Blue Bubble Block",
 	"item.blowing-bubbles.brown_bubble_block": "Brown Bubble Block",
+	"block.blowing-bubbles.brown_bubble_block": "Brown Bubble Block",
 	"item.blowing-bubbles.green_bubble_block": "Green Bubble Block",
+	"block.blowing-bubbles.green_bubble_block": "Green Bubble Block",
 	"item.blowing-bubbles.red_bubble_block": "Red Bubble Block",
+	"block.blowing-bubbles.red_bubble_block": "Red Bubble Block",
 	"item.blowing-bubbles.black_bubble_block": "Black Bubble Block",
+	"block.blowing-bubbles.black_bubble_block": "Black Bubble Block",
+
+	"item.blowing-bubbles.bubble_dispenser": "Bubble Dispenser",
+	"block.blowing-bubbles.bubble_dispenser": "Bubble Dispenser",
 	
 	"blowing-bubbles.midnightconfig.title": "Blowing Bubbles Config",
 	"blowing-bubbles.midnightconfig.category.client": "Client",
