--- a/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
+++ b/src/main/resources/assets/blowing-bubbles/lang/ru_ru.json
@@ -1,6 +1,7 @@
 {
-	"item.blowing-bubbles.bubble_wand": "Палочка для пузырьков",
 	"entity.blowing-bubbles.bubble": "Пузырь",
+
+	"item.blowing-bubbles.bubble_wand": "Палочка для пузырьков",
 	"enchantment.blowing-bubbles.bubble_barrage": "Шквал пузырей",
 	"enchantment.blowing-bubbles.bubble_barrage.desc": "Надувает маленькие пузыри непрерывно",
 	"enchantment.blowing-bubbles.infinite_bubble": "Бесконечный пузырь",
@@ -8,23 +9,51 @@
 	"enchantment.blowing-bubbles.bigger_bubbles": "Большие пузыри",
 	"enchantment.blowing-bubbles.bigger_bubbles.desc": "Пузыри надуваются больше и быстрее",
 	"item.blowing-bubbles.bubble_wand.rainbow": "Радужные пузыри",
+
 	"tag.item.blowing-bubbles.bubble_blocks": "Пузыри",
 	
-	"item.blowing-bubbles.bubble_dispenser": "Раздатчик пузырей",
 	"item.blowing-bubbles.white_bubble_block": "Белый пузырь",
+	"block.blowing-bubbles.white_bubble_block": "Белый пузырь",
 	"item.blowing-bubbles.orange_bubble_block": "Оранжевый пузырь",
+	"block.blowing-bubbles.orange_bubble_block": "Оранжевый пузырь",
 	"item.blowing-bubbles.magenta_bubble_block": "Пурпурный пузырь",
+	"block.blowing-bubbles.magenta_bubble_block": "Пурпурный пузырь",
 	"item.blowing-bubbles.light_blue_bubble_block": "Голубой пузырь",
+	"block.blowing-bubbles.light_blue_bubble_block": "Голубой пузырь",
 	"item.blowing-bubbles.yellow_bubble_block": "Желтый пузырь",
+	"block.blowing-bubbles.yellow_bubble_block": "Желтый пузырь",
 	"item.blowing-bubbles.lime_bubble_block": "Лаймовый пузырь",
+	"block.blowing-bubbles.lime_bubble_block": "Лаймовый пузырь",
 	"item.blowing-bubbles.pink_bubble_block": "Розовый пузырь",
+	"block.blowing-bubbles.pink_bubble_block": "Розовый пузырь",
 	"item.blowing-bubbles.gray_bubble_block": "Серый пузырь",
+	"block.blowing-bubbles.gray_bubble_block": "Серый пузырь",
 	"item.blowing-bubbles.light_gray_bubble_block": "Светло-серый пузырь",
+	"block.blowing-bubbles.light_gray_bubble_block": "Светло-серый пузырь",
 	"item.blowing-bubbles.cyan_bubble_block": "Голубой пузырь",
+	"block.blowing-bubbles.cyan_bubble_block": "Голубой пузырь",
 	"item.blowing-bubbles.purple_bubble_block": "Фиолетовый пузырь",
+	"block.blowing-bubbles.purple_bubble_block": "Фиолетовый пузырь",
 	"item.blowing-bubbles.blue_bubble_block": "Синий пузырь",
+	"block.blowing-bubbles.blue_bubble_block": "Синий пузырь",
 	"item.blowing-bubbles.brown_bubble_block": "Коричневый пузырь",
+	"block.blowing-bubbles.brown_bubble_block": "Коричневый пузырь",
 	"item.blowing-bubbles.green_bubble_block": "Зеленый пузырь",
+	"block.blowing-bubbles.green_bubble_block": "Зеленый пузырь",
 	"item.blowing-bubbles.red_bubble_block": "Красный пузырь",
-	"item.blowing-bubbles.black_bubble_block": "Черный пузырь"
+	"block.blowing-bubbles.red_bubble_block": "Красный пузырь",
+	"item.blowing-bubbles.black_bubble_block": "Черный пузырь",
+	"block.blowing-bubbles.black_bubble_block": "Черный пузырь",
+
+	"item.blowing-bubbles.bubble_dispenser": "Раздатчик пузырей",
+	"block.blowing-bubbles.bubble_dispenser": "Раздатчик пузырей",
+	
+	"blowing-bubbles.midnightconfig.title": "Конфигурация Blowing Bubbles",
+	"blowing-bubbles.midnightconfig.category.client": "Клиент",
+	"blowing-bubbles.midnightconfig.bubbleQuality": "Качество модели пузырей",
+	"blowing-bubbles.midnightconfig.bubbleQuality.tooltip": "Меняет сложность модели пузыря\n\nБыстрое: Куб\nПростое: Округленный куб\nОбычное: Хороший обычный пузырь\nКачественное: Большие пузыри получают больше качества",
+	"blowing-bubbles.midnightconfig.enum.ModelQuality.FAST": "Быстрое",
+	"blowing-bubbles.midnightconfig.enum.ModelQuality.PLAIN": "Простое",
+	"blowing-bubbles.midnightconfig.enum.ModelQuality.SIMPLE": "Обычное",
+	"blowing-bubbles.midnightconfig.enum.ModelQuality.QUALITY": "Качественное"
 }
